# slate

./: Cargo.toml  README.md  important.txt
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  lipsum.rs  long_text.txt  main.rs  memory.rs  other.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/sudoku_test/: board.rs  mod.rs  solution.rs  solver.rs
src/task/: keyboard.rs  mod.rs  sleep.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
