[package]
name = "slate"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.29", features = ["map_physical_memory"]}
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.9.8"
uart_16550 = "0.3.2"
volatile = "0.2.6"
x86_64 = "0.15.2"
linked_list_allocator = "0.9.1"

itertools = { version = "0.13.0", default-features = false }
arrayvec = { version = "0.7.6", default-features = false }

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "should_panic"
harness = false


[[test]]
name = "stack_overflow"
harness = false
